# t3k-multiagent

./: .dockerignore  .env.example  .gitignore  01-PROJECT-PLAN-PHASES.md  README.md  app.go  docker-compose.demo.yml  docker-compose.native.yml  docker-compose.override.yml  docker-compose.yml  go.mod  main.go  wails.json
data/seeds/: departments.json  users.json
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.svelte  api.js  app.css
frontend/src/lib/: DocumentDetail.svelte  DocumentList.svelte  DropZone.svelte  Sidebar.svelte  TracePanel.svelte
scripts/: demo.ps1  dev.ps1  logs.ps1  native.ps1  pull-models.ps1  setup.ps1  smoke-test.ps1
sidecar/: Dockerfile  app.py  call_agent.py  config.py  events.py  graph.py  ids.py  intake.py  ollama_client.py  pyproject.toml  reading_context.py  schemas.py  states.py
sidecar/agents/: okuyucu.py
sidecar/db/: connection.py  migrate.py  repositories.py  seed.py
sidecar/db/migrations/: 001_init.sql
sidecar/tests/: conftest.py  test_call_agent.py  test_intake.py
sidecar/tools/: page_tools.py  registry.py
