[project]
name = "evrak-sidecar"
version = "0.1.0"
description = "Evrak Asistani sidecar: FastAPI + LangGraph + DuckDB, schema-constrained tool-using agents"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "duckdb>=1.1",
    "pymupdf>=1.24",
    "ollama>=0.4",
    "httpx>=0.27",
    "uuid-utils>=0.10",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0",
    "debugpy>=1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
